[DOC] Summary fixes

--- a/docs/content/summary.tex
+++ b/docs/content/summary.tex
@@ -6,9 +6,9 @@ The ever transforming market and the conceptual changes of software delivery dri
 
 This thesis work first introduced Kubernetes, the widely popular open-source platform for containerized workload orchestration in the cloud, describing its main features and concepts used throughout this project.
 
-Following that, the design and implementation of a sample application were presented which was later used during the dependability analyses. The sample application is a small, Kubernetes based distributed system, composed of both stateful and stateless components that support scalability. It conforms to the most important microservice requirements like containerization, separation of responsibilities and observability.
+Following that, the design and implementation of a sample application were presented which was later used during the dependability analyses. The sample application is a small, Kubernetes-based distributed system, composed of both stateful and stateless components that support scalability. It conforms to the most important microservice requirements like containerization, separation of responsibilities and observability.
 
-Afterwards, the document expressed the need for a configurable, automated test framework that can be used for measuring the dependability of Kubernetes based applications. The related chapter described the design process and implementation of such a tool in detail, highlighting its capabilities like automatic load generation, fault injection and monitoring. With the help of this framework, baseline measurements were conducted against the sample application to assess its dependability characteristics in its original form. The initial measurement results were analyzed and served as good basis to design further improvements on the sample application to achieve a more robust system.
+Afterwards, the document expressed the need for a configurable, automated test framework that can be used for measuring the dependability of Kubernetes-based applications. The related chapter described the design process and implementation of such a tool in details, highlighting its capabilities like automatic load generation, fault injection and monitoring. With the help of this framework, baseline measurements were conducted against the sample application to assess its dependability characteristics in its original form. The initial measurement results were analyzed and served as good basis to design further improvements on the sample application to achieve a more robust system.
 
 With the sample application and the baseline results being ready, enhancements could be implemented to harden the dependability of the system. The next parts of the thesis explored the possible architectural layers, where additional development could take place. Later on, two specific improvements were carried out, a custom implementation and the integration of Kafka into the sample application. The effects of these two enhancements on the sample application's dependability were measured with the formerly created test framework and conclusions were drawn based on the results. The key takeaways were that it is worth to spend time with making improvements on the application level before integrating complex third-party systems, but when adapting these softwares, one has to make sure not to introduce additional weaknesses into the system with incomplete configurations.
 
