--- a/docs/content/abstract.tex
+++ b/docs/content/abstract.tex
@@ -12,9 +12,9 @@ A felhőalapú számítástechnika mindenhol jelen van. Az egyéni felhasználó
 
 Ha konténeralapú mikroszolgáltatások telepítéséről és üzemeltetéséről beszélünk -- legyen szó nyilvános vagy privát felhőről --, a Kubernetes lett a de facto szabvány. A Kubernetes lehetővé teszi a fejlesztők számára, hogy hatékonyan szervezzék alkalmazásaikat, ám ez a magas absztrakciós szint átformálja és komolyabb feladattá teszi a szolgáltatásbiztonság mérésére és garantálására szolgáló módszerek használatát.
 
-A diplomaterv először bemutatja a Kubernetes-t, annak legfontosabb funkcióit és ötleteit, valamint a hozzá kapcsolódó ökoszisztéma egyéb népszerű technológiáit és fogalmait. Meghatározza, hogy elosztott rendszerekben miként mérhetőek a szolgáltatásbiztonság metrikák. Ezt egy egyedi fejlesztésű, Kubernetes alapú mintaalkalmazás segítségével demonstrálja, amelynek tervezése és megvalósítása jól leírásra kerül.
+A diplomaterv először bemutatja a Kubernetes-t, annak legfontosabb funkcióit és ötleteit, valamint a hozzá kapcsolódó ökoszisztéma egyéb népszerű technológiáit és fogalmait. Meghatározza, hogy elosztott rendszerekben miként mérhetőek a szolgáltatásbiztonság metrikák. Ezt egy egyedi fejlesztésű, Kubernetes alapú mintaalkalmazás segítségével demonstrálja, amelynek tervezése és megvalósítása leírásra kerül.
 
-Annak érdekében, hogy az előbb említett alkalmazás szolgáltatásbiztonság jellemzőit mérni lehessen, elkészült egy tesztelési keretrendszer. A keretrendszer több olyan technológiából épül fel, amelyek lehetővé teszik az automatizálást, a terhelésgenerálást, a hibainjektálást és a metrikák gyűjtését. Ezen túlmenően a szolgáltatásbiztonság javítása érdekében különböző beavatkozások alkalmazhatóak, melyek hatása ellenőrizhető és összevethető. A dolgozat két példaimplementációt mutat be, azonban a később tárgyalt megfontolások alapján továbbiak megvalósítása is lehetséges. A keretrendszer tipikus munkafolyamata a következő: először telepítjük az alkalmazást egy adott konfigurációval, elindítunk egy terhelésgenerálást, hogy legyen állandó forgalom az alkalmazás felé, végrehajtjuk a hibainjektálási mechanizmusokat, és mindeközben figyeljük a rendszer állapotát és gyűjtjük a metrikákat. Ez megismételhető különböző konfigurációkkal, és az eredmények szisztematikusan összehasonlíthatók és vizualizálhatók.
+Annak érdekében, hogy az előbb említett alkalmazás szolgáltatásbiztonság jellemzőit mérni lehessen, elkészült egy tesztelési keretrendszer. A keretrendszer több olyan technológiából épül fel, amelyek lehetővé teszik az automatizálást, a terhelésgenerálást, a hibainjektálást és a metrikák gyűjtését. Ezen túlmenően a szolgáltatásbiztonság javítása érdekében különböző beavatkozások alkalmazhatóak, melyek hatása ellenőrizhető és összevethető. A dolgozat két példaimplementációt mutat be, azonban a később tárgyalt megfontolások alapján továbbiak megvalósítása is lehetséges. A keretrendszer tipikus munkafolyamata a következő: először telepítjük az alkalmazást egy adott konfigurációval, elindítunk egy terhelésgenerálást, hogy állandó forgalom legyen az alkalmazás felé, végrehajtjuk a hibainjektálási mechanizmusokat, és mindeközben pedig figyeljük a rendszer állapotát és gyűjtjük a metrikákat. Ez megismételhető különböző konfigurációkkal, és az eredmények szisztematikusan összehasonlíthatók és vizualizálhatók lesznek.
 
 
 \vfill
