[DOC] Link notebook source files

--- a/docs/bib/mybib.bib
+++ b/docs/bib/mybib.bib
@@ -442,3 +442,8 @@ https://inf.mit.bme.hu/sites/default/files/materials/category/kateg%C3%B3ria/okt
 	title        = {{W}hat is {L}itmus},
 }
 
+@misc{ThesisRepoNotebook,
+	author       = {{martonorova}},
+	howpublished = {\url{https://github.com/martonorova/msc-onlab/tree/master/notebook} (accessed at 19/05/2022)},
+	title        = {Thesis repository - Notebook files},
+}
