--- a/docs/content/evaluation.tex
+++ b/docs/content/evaluation.tex
@@ -2,7 +2,7 @@
 \chapter{Evaluation} \label{evaluation}
 %----------------------------------------------------------------------------
 
-This chapter collects and evaluates the results of the measurements that apply enhancements ot the application. The diagrams presented in this chapter are created with the previously mentioned technologies -- Python Pandas, Plotly and Jupyter Notebook.
+This chapter collects and evaluates the results of the measurements that apply enhancements ot the application. The diagrams presented in this chapter are created with the previously mentioned technologies -- Python Pandas, Plotly and Jupyter Notebook. The sources of the results -- both the data and the Jupyter Notebook files -- can be found in the repository of the project \cite{ThesisRepoNotebook}.
 
 %%----------------------------------------------------------------------------
 %\section{Continuous Delivery}
