--- a/docs/content/acknowledgement.tex
+++ b/docs/content/acknowledgement.tex
@@ -2,4 +2,4 @@
 \chapter*{\koszonetnyilvanitas}\addcontentsline{toc}{chapter}{\koszonetnyilvanitas}
 %----------------------------------------------------------------------------
 
-TBD
+I would like to thank all the people who helped me during the time to prepare this thesis, without being exhaustive. My advisor, Dr. Zoltán Szatmári, who guided me through the work, kept me on track and gave countless professional advice in order to ensure the success of the project. I thank Eszter Zsubori for the help with the revision of the document's stylistics. Finally, I am really grateful for all the encouragements from my family, friends and colleagues.
